tests/int/deps_command/snapshots/integration__int__deps_command__depth__fixture_depth_1.snap
---
source: tests/int/deps_command/depth.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - deps
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
advanced_globs -> dir_module
advanced_globs -> file_module
advanced_globs -> visibility
app -> advanced_globs
app -> app_only
app -> dir_module
app -> file_module
app -> glob_patterns
app -> glob_showcase
app -> inline_modules
app -> item_visibility
app -> mixed
app -> nesting
app -> reexports
app -> visibility
baz -> foo
custom_path -> item_visibility
dir_module -> file_module
dir_module -> inline_modules
file_module -> nesting
glob_patterns -> dir_module
glob_patterns -> file_module
glob_showcase -> file_module
glob_showcase -> inline_modules
glob_showcase -> nesting
group_patterns -> file_module
group_patterns -> nesting
inline_modules -> dir_module
inline_modules -> file_module
inline_modules -> no_pub_items
item_visibility -> reexports
main -> advanced_globs
main -> dir_module
main -> file_module
main -> glob_patterns
main -> glob_showcase
main -> inline_modules
main -> item_visibility
main -> mixed
main -> nesting
main -> reexports
main -> visibility
mixed -> custom_path
nesting -> inline_modules
reexports -> file_module
reexports -> item_visibility
reexports -> nesting
reexports -> visibility
uses_empty_glob -> no_pub_items
visibility -> dir_module
visibility -> file_module
visibility -> nesting

----- stderr -----
