tests/int/deps_command/snapshots/integration__int__deps_command__depth__fixture_depth_2.snap
---
source: tests/int/deps_command/depth.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - deps
    - "-d"
    - "2"
---
success: true
exit_code: 0
----- stdout -----
advanced_globs -> advanced_globs::aliased_module
advanced_globs -> advanced_globs::enum_variants
advanced_globs -> advanced_globs::internal
advanced_globs -> advanced_globs::layer1
advanced_globs -> advanced_globs::macro_module
advanced_globs -> advanced_globs::original
advanced_globs -> advanced_globs::shadowing
advanced_globs -> advanced_globs::trait_providers
advanced_globs -> advanced_globs::unix_specific
advanced_globs -> advanced_globs::windows_specific
advanced_globs -> dir_module::child_file
advanced_globs -> file_module
advanced_globs -> visibility
advanced_globs -> visibility::pub_mod
advanced_globs::prelude -> advanced_globs
app -> advanced_globs
app -> dir_module
app -> dir_module::child_dir
app -> dir_module::child_file
app -> file_module
app -> glob_patterns
app -> glob_patterns::constants
app -> glob_patterns::traits
app -> glob_patterns::types
app -> glob_patterns::utilities
app -> glob_showcase
app -> inline_modules
app -> inline_modules::inner
app -> inline_modules::nested
app -> item_visibility
app -> mixed
app -> mixed::file_child
app -> mixed::inline_child
app -> nesting
app -> nesting::level1
app -> reexports
app -> visibility
app -> visibility::pub_mod
baz -> foo::bar
custom_path -> item_visibility
dir_module -> inline_modules::nested
dir_module::child_dir -> file_module
dir_module::child_file -> dir_module
file_module -> nesting
foo -> foo::bar
foo::other -> foo::bar
glob_patterns -> dir_module
glob_patterns -> dir_module::child_file
glob_patterns -> file_module
glob_patterns -> glob_patterns::constants
glob_patterns -> glob_patterns::mixed_exports
glob_patterns -> glob_patterns::outer
glob_patterns -> glob_patterns::self_ref
glob_patterns -> glob_patterns::set_a
glob_patterns -> glob_patterns::set_b
glob_patterns -> glob_patterns::traits
glob_patterns -> glob_patterns::types
glob_patterns -> glob_patterns::utilities
glob_showcase -> file_module
glob_showcase -> glob_showcase::api
glob_showcase -> glob_showcase::config
glob_showcase -> glob_showcase::database
glob_showcase -> glob_showcase::errors
glob_showcase -> glob_showcase::models
glob_showcase -> glob_showcase::traits
glob_showcase -> glob_showcase::utils
glob_showcase -> inline_modules
glob_showcase -> nesting::level1
glob_showcase::prelude -> glob_showcase
glob_showcase::prelude -> glob_showcase::api
glob_showcase::prelude -> glob_showcase::database
glob_showcase::prelude -> glob_showcase::errors
glob_showcase::prelude -> glob_showcase::models
glob_showcase::prelude -> glob_showcase::traits
glob_showcase::prelude -> glob_showcase::utils
group_patterns -> file_module
group_patterns -> nesting
group_patterns -> nesting::level1
inline_modules -> file_module
inline_modules -> inline_modules::private_inline
inline_modules::inner -> file_module
inline_modules::nested -> dir_module
inline_modules::outer -> no_pub_items
item_visibility -> reexports
main -> advanced_globs
main -> dir_module
main -> dir_module::child_dir
main -> dir_module::child_file
main -> file_module
main -> glob_patterns
main -> glob_patterns::constants
main -> glob_patterns::traits
main -> glob_patterns::types
main -> glob_patterns::utilities
main -> glob_showcase
main -> inline_modules
main -> inline_modules::inner
main -> inline_modules::nested
main -> item_visibility
main -> mixed
main -> mixed::file_child
main -> mixed::inline_child
main -> nesting
main -> nesting::level1
main -> reexports
main -> visibility
main -> visibility::pub_mod
mixed::file_child -> custom_path
mixed::file_child -> mixed
mixed::inline_child -> mixed::file_child
nesting -> inline_modules
nesting::level1 -> nesting
reexports -> file_module
reexports -> nesting
reexports -> reexports::internal
reexports -> reexports::types
reexports::internal -> item_visibility
reexports::types -> visibility
uses_empty_glob -> no_pub_items
visibility -> visibility::inner
visibility -> visibility::private_mod
visibility -> visibility::pub_crate_mod
visibility -> visibility::pub_mod
visibility -> visibility::pub_super_mod
visibility -> visibility::restricted_mod
visibility::inner -> visibility
visibility::private_mod -> nesting::level1
visibility::pub_crate_mod -> visibility::pub_mod
visibility::pub_mod -> file_module
visibility::pub_super_mod -> dir_module
visibility::restricted_mod -> nesting

----- stderr -----
