tests/int/deps_command/snapshots/integration__int__deps_command__depth__own_depth_2.snap
---
source: tests/int/deps_command/depth.rs
info:
  program: crawk
  args:
    - deps
    - "-d"
    - "2"
---
success: true
exit_code: 0
----- stdout -----
analyzer -> cache
analyzer -> discover
analyzer -> error
analyzer -> graph
analyzer -> model
analyzer -> module_path
analyzer -> parser
analyzer -> reference
analyzer -> resolve
analyzer -> rules
cli -> cli::overview
cli -> cli::validation
cli -> version
cli::overview -> version
discover -> cache
discover::module_tree -> cache
discover::module_tree -> constants
discover::module_tree -> discover
discover::module_tree -> module_path
discover::module_tree -> utils
error -> discover
format::check_cmd -> format
format::check_cmd -> lib
format::cycles -> format
format::cycles -> lib
format::deps_cmd -> format
format::deps_cmd -> lib
format::list_cmd -> lib
format::paths -> lib
format::use_cmd -> lib
format::why_cmd -> lib
graph -> error
graph -> graph::cycles
graph -> graph::edges
graph -> graph::orphans
graph -> graph::paths
graph::cycles -> graph::edges
graph::edges -> model
graph::edges -> reference
graph::orphans -> graph::edges
graph::paths -> graph::edges
lib -> analyzer
lib -> discover
lib -> error
lib -> graph
lib -> model
lib -> reference
lib -> rules
logger -> cli
main -> cli
main -> format
main -> format::check_cmd
main -> format::cycles
main -> format::deps_cmd
main -> format::list_cmd
main -> format::orphans
main -> format::paths
main -> format::use_cmd
main -> format::why_cmd
main -> lib
main -> logger
main -> version
model -> reference
parser -> cache
parser -> parser::visitor
parser -> reference
parser -> utils
parser::visitor -> constants
parser::visitor -> reference
parser::visitor -> utils
reference -> constants
resolve -> cache
resolve -> discover
resolve -> module_path
resolve -> reference
resolve -> utils
rules -> graph
rules -> module_path
rules -> rules::eval
rules -> rules::load
rules::eval -> graph
rules::eval -> module_path
rules::eval -> rules
rules::load -> error
rules::load -> graph
rules::load -> rules
utils -> constants

----- stderr -----
