tests/int/deps_command/snapshots/integration__int__deps_command__depth__should_deps_depth_1_produce_top_level_only_for_own_crate.snap
---
source: tests/int/deps_command/depth.rs
info:
  program: crawk
  args:
    - deps
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
analyzer -> cache
analyzer -> discover
analyzer -> error
analyzer -> graph
analyzer -> model
analyzer -> parser
analyzer -> reference
analyzer -> resolve
analyzer -> rules
cli -> version
discover -> cache
discover -> constants
discover -> utils
error -> discover
format -> lib
graph -> error
graph -> model
graph -> reference
lib -> analyzer
lib -> discover
lib -> error
lib -> graph
lib -> model
lib -> reference
lib -> rules
logger -> cli
main -> cli
main -> format
main -> lib
main -> logger
main -> version
model -> reference
parser -> cache
parser -> constants
parser -> reference
parser -> utils
reference -> constants
resolve -> cache
resolve -> discover
resolve -> reference
resolve -> utils
rules -> error
rules -> graph
utils -> constants

----- stderr -----
